--- a/src/MasterChef.Web/Views/Shared/_Layout.cshtml
+++ b/src/MasterChef.Web/Views/Shared/_Layout.cshtml
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PagHiper</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <title>@ViewData["Title"] - MasterChef</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"  asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css"  asp-append-version="true"/>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PagHiper</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MasterChef</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                         @*     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
                         @* </li> *@
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Leads" asp-action="Create">Cadastro de Aluno</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Cadastro de Receitas</a>
                         </li>
                     </ul>
                 </div>
@@ -40,11 +40,11 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - PagHiper.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - MasterChef - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"  asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"  asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
