--- a/src/MasterChef.Web/Views/Recipe/Edit.cshtml
+++ b/src/MasterChef.Web/Views/Recipe/Edit.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="WayOfPrepare" class="control-label"></label>
-                <input asp-for="WayOfPrepare" class="form-control" />
+                <textarea asp-for="WayOfPrepare" class="form-control" rows="8"></textarea>
                 <span asp-validation-for="WayOfPrepare" class="text-danger"></span>
             </div>
             <div class="form-group">
