--- a/src/MasterChef.Web/Views/Recipe/Index.cshtml
+++ b/src/MasterChef.Web/Views/Recipe/Index.cshtml
@@ -20,13 +20,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Picture)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>*@
-            @*<th>
-                @Html.DisplayNameFor(model => model.LastChange)
-            </th>*@
+            </th>           
             <th></th>
         </tr>
     </thead>
@@ -47,16 +41,10 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Picture)
-            </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastChange)
-            </td>*@
+            </td>           
             <td>
                     @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Detailhes", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Deletar", "Delete", new { id = item.Id  })
             </td>
         </tr>
