--- a/src/MasterChef.Web/Views/Recipe/Cadastro.cshtml
+++ b/src/MasterChef.Web/Views/Recipe/Cadastro.cshtml
@@ -36,7 +36,7 @@
         <div class="row g-3 align-items-center">
             <div class="row g-2 align-items-center">
                 <div class="col-12">
-                    <label asp-for="@Model.WayOfPrepare" class="form-label">Mode de preparo</label>
+                    <label asp-for="@Model.WayOfPrepare" class="form-label">Modo de preparo</label>
                     <textarea asp-for="@Model.WayOfPrepare" class="form-control id="txtModeFazer" rows="10"></textarea>
                     <span asp-validation-for="@Model.WayOfPrepare" class="text-danger"></span>
                 </div>
