--- a/src/MasterChef.Web/Views/Recipe/_ExcluirReceitaPartial.cshtml
+++ b/src/MasterChef.Web/Views/Recipe/_ExcluirReceitaPartial.cshtml
@@ -7,7 +7,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Desja remover esse item?</h5>
+                    <h5 class="modal-title">Deseja remover esse item?</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
