--- a/src/MasterChef.Web/Views/Shared/_Layout.cshtml
+++ b/src/MasterChef.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MasterChefe</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MasterChef</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Recipe" asp-action="Cadastro">Receita</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Recipe" asp-action="Cadastro">Receitas</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-white bg-dark">
         <div class="container">
-            &copy; 2022 - MasterChefe
+            &copy; 2022 - MasterChef
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
