--- a/src/MasterChef.Web/Views/Ingredient/_ExcluirIngredientePartial.cshtml
+++ b/src/MasterChef.Web/Views/Ingredient/_ExcluirIngredientePartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MasterChef.Web.Models.IngredientModel
 
 
-<form asp-controller="Ingredient" asp-action="Excluir" method="post">
+<form asp-controller="Ingredient" asp-action="Delete" method="post">
 
     <div class="modal" tabindex="-1" id="modalExcluirIngrediente">
         <div class="modal-dialog">
