--- a/src/MasterChef.Web/Views/Recipe/_ListaReceitaPartial.cshtml
+++ b/src/MasterChef.Web/Views/Recipe/_ListaReceitaPartial.cshtml
@@ -19,7 +19,7 @@
         {
             <tbody>
                 <tr>
-                    <td><img src="~/Img/@item.Picture" class="imagemGrid" /></td>
+                    <td><img src="~/Img/@item.Image" class="imagemGrid" /></td>
                     <td>@item.Title</td>
                     <td>@item.CreateDate</td>
                     <td>
