--- a/src/MasterChef.Web/Views/Home/_PartialVitrine.cshtml
+++ b/src/MasterChef.Web/Views/Home/_PartialVitrine.cshtml
@@ -9,7 +9,7 @@
             {
                 <div class="col">
                     <div class="card h-100">
-                        <img class="card-img-top" data-src="@Html.DisplayFor(modelItem => @item.Picture)" src="~/Img/@item.Picture">
+                        <img class="card-img-top" data-src="@Html.DisplayFor(modelItem => @item.Image)" src="~/Img/@item.Image">
                         <div class="card-body">
                             <h5 class="card-title">@Html.DisplayFor(modelItem => @item.Title)</h5>
                             <div class="d-flex justify-content-between align-items-center">
