--- a/src/MasterChef.Web/Views/Recipe/Cadastro.cshtml
+++ b/src/MasterChef.Web/Views/Recipe/Cadastro.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<h5>Cadastro</h5>
+<h5>Cadastro de Receitas</h5>
 
 <form asp-controller="Recipe" asp-action="Cadastro" method="post" class="border" enctype="multipart/form-data">
 
