--- a/src/MasterChef.Web/Views/Home/_DetalhePartial.cshtml
+++ b/src/MasterChef.Web/Views/Home/_DetalhePartial.cshtml
@@ -16,7 +16,7 @@
                         </div>
 
                         <div class="col">
-                            <h4>Modo do Fazer</h4>
+                            <h4>Modo de preparo</h4>
                             <h5 id="idModoFazer"></h5>
                         </div>
 
@@ -36,10 +36,7 @@
 
 
                         <tbody id="tbody">
-
-                            <tr>
-
-                            </tr>
+                            
                         </tbody>
                     </table>
                 </div>
