--- a/src/MasterChef.Web/Views/Shared/_Layout.cshtml
+++ b/src/MasterChef.Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Recipe" asp-action="Cadastro">Receitas</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Recipe" asp-action="Cadastro">Cadastro de Receitas</a>
                         </li>
                     </ul>
                 </div>
