--- a/src/MasterChef.UI/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/src/MasterChef.UI/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -9,15 +9,15 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p>Sua conta ocontém dados pesssoais que foram paassados para nós. Esta pagina permite a você baixar os seus dados.</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            <strong>Deletar estes dados irão remover permanentemente sua conta, e não pode ser desfeito!</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-primary" type="submit">Baixar meus dados</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Deletar</a>
         </p>
     </div>
 </div>
