--- a/src/MasterChef.UI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/src/MasterChef.UI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -5,14 +5,14 @@
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+        Layout = "/Views/Shared/_Layout.cshtml";
     }
 }
 
-<h1>Manage your account</h1>
+<h1>Dados da conta</h1>
 
 <div>
-    <h2>Change your account settings</h2>
+    <h2>Configurações de conta</h2>
     <hr />
     <div class="row">
         <div class="col-md-3">
