--- a/src/MasterChef.UI/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/src/MasterChef.UI/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Esqueceu sua senha?";
+    ViewData["Title"] = "Esqueceu sua senha";
 }
 
 <h1>@ViewData["Title"]</h1>
