--- a/src/MasterChef.UI/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/src/MasterChef.UI/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Coformação ";
+    ViewData["Title"] = "Cofirmação ";
 }
 
 <h1>@ViewData["Title"]</h1>
