--- a/src/MasterChef.UI/Views/Shared/_Layout.cshtml
+++ b/src/MasterChef.UI/Views/Shared/_Layout.cshtml
@@ -3,14 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MasterChef.Web</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <title>@ViewData["Title"] - MasterChef</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MasterChef.Web.styles.css" asp-append-version="true" />
-    <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
-    <link href="~/lib/font-awesome/css/fontawesome.css" rel="stylesheet" />
-    <link href="~/lib/font-awesome/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" asp-append-version="true"/>
+    <link href="~/lib/font-awesome/css/fontawesome.min.css" rel="stylesheet" asp-append-version="true"/>
 </head>
 <body>
     <header>
@@ -43,11 +40,11 @@
 
     <footer class="border-top footer text-white bg-dark">
         <div class="container">
-            &copy; 2022 - MasterChef
+            &copy; @DateTime.Now.Year - MasterChef
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
