--- a/src/MasterChef.UI/Views/Shared/_LoginPartial.cshtml
+++ b/src/MasterChef.UI/Views/Shared/_LoginPartial.cshtml
@@ -4,14 +4,14 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-            <a id="manage" class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Olá @UserManager.GetUserName(User)</a>
+            <a id="manage" class="nav-link text-light my-2" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Configurações da conta</a> 
     </li>
     <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+        <form id="logoutForm" class="nav-link text-light my-sm-0" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-light">Desconectar</button>
         </form>
     </li>
