--- a/src/MasterChef.UI/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/src/MasterChef.UI/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -22,7 +22,6 @@
         </li>
         <li>
             <p>Escaneie o QR Code ou digite esta chave <kbd>@Model.SharedKey</kbd> no seu app de autenticação em 2 fatores. Espaços e letras maiusculas não importam.</p>
-            <div class="alert alert-info">Aprenda como <a href="https://go.microsoft.com/fwlink/?Linkid=852423">ativar o leitor de QR code</a>.</div>
             <div id="qrCode"></div>
             <div id="qrCodeData" data-url="@Model.AuthenticatorUri"></div>
         </li>
@@ -50,4 +49,7 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script type="text/javascript" src="~/lib/qrcodejs/qrcode.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/qr.js" asp-append-version="true"></script>
+        
 }
