--- a/src/MasterChef.UI/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/src/MasterChef.UI/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -10,15 +10,15 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
+        <strong>Se você resetar sua chave do autenticador, o app não irá funcionar até ser reconfigurado.</strong>
     </p>
     <p>
-        This process disables 2FA until you verify your authenticator app.
-        If you do not complete your authenticator app configuration you may lose access to your account.
+        Este processo desativa o 2FA até você verificar seu app autenticador.
+        Se você não completar a configuração do autenticador, poderá perder sua conta.
     </p>
 </div>
 <div>
     <form id="reset-authenticator-form" method="post">
-        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Reset authenticator key</button>
+        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Resetar chave do autenticador</button>
     </form>
 </div>
