--- a/src/MasterChef.UI/Views/Home/Index.cshtml
+++ b/src/MasterChef.UI/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<MasterChef.UI.Models.RecipeModel>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Receitas";
 }
 
 
