--- a/src/MasterChef.UI/wwwroot/css/site.css
+++ b/src/MasterChef.UI/wwwroot/css/site.css
@@ -42,3 +42,16 @@ img {
     width:40px;
     border:1px;
 }
+#qrcode {
+    width:160px;
+    height:160px;
+    margin-top:15px;
+}
+footer{
+    background: #ffab62;
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
