--- a/src/MasterChef.UI/Views/Home/_PartialVitrine.cshtml
+++ b/src/MasterChef.UI/Views/Home/_PartialVitrine.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MasterChef.UI.Models.RecipeModel>
+﻿@model IEnumerable<MasterChef.Domain.Models.RecipeModel>
 
 
 @if (Model != null)
