--- a/src/MasterChef.UI/Views/Recipe/Cadastro.cshtml
+++ b/src/MasterChef.UI/Views/Recipe/Cadastro.cshtml
@@ -1,5 +1,5 @@
-﻿@using MasterChef.UI.Models
-@model MasterChef.UI.Models.RecipeModel
+﻿@using MasterChef.Domain.Models
+@model MasterChef.Domain.Models.RecipeModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
