--- a/src/MasterChef.UI/Views/Recipe/_ExcluirReceitaPartial.cshtml
+++ b/src/MasterChef.UI/Views/Recipe/_ExcluirReceitaPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model MasterChef.UI.Models.RecipeModel
+﻿@model MasterChef.Domain.Models.RecipeModel
 
 
 <form asp-controller="Recipe" asp-action="Excluir" method="post">
