--- a/src/MasterChef.UI/Views/Shared/Error.cshtml
+++ b/src/MasterChef.UI/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model MasterChef.UI.Models.ErrorViewModel
+﻿@model MasterChef.Domain.Models.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
