--- a/src/MasterChef.UI/Views/Ingredient/_ExcluirIngredientePartial.cshtml
+++ b/src/MasterChef.UI/Views/Ingredient/_ExcluirIngredientePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model MasterChef.UI.Models.IngredientModel
+﻿@model MasterChef.Domain.Models.IngredientModel
 
 
 <form asp-controller="Ingredient" asp-action="Delete" method="post">
