--- a/src/MasterChef.UI/Views/Ingredient/_ListaIngredientePartial.cshtml
+++ b/src/MasterChef.UI/Views/Ingredient/_ListaIngredientePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MasterChef.UI.Models.IngredientModel>
+﻿@model IEnumerable<MasterChef.Domain.Models.IngredientModel>
 
 @if (@Model.Count()> 0)
 {
