--- a/src/MasterChef.UI/Views/Recipe/Cadastro.cshtml
+++ b/src/MasterChef.UI/Views/Recipe/Cadastro.cshtml
@@ -22,7 +22,7 @@
             </div>
 
             <div class="col-4">
-                <label asp-for="@Model.File" class="form-label">Arquivo</label>
+                <label asp-for="@Model.File" class="form-label">Escolha um arquivo</label>
                 <input type="file" asp-for="@Model.File" class="form-control" id="txtimagem">
                 <span asp-validation-for="@Model.File" class="text-danger"></span>
             </div>
