--- a/src/MasterChef.UI/Views/Home/_DetalhePartial.cshtml
+++ b/src/MasterChef.UI/Views/Home/_DetalhePartial.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-
-<div class="modal" id="modalDetalhes" tabindex="-1">
+﻿<div class="modal" id="modalDetalhes" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -38,4 +35,3 @@
         </div>
     </div>
 </div>
-
