--- a/src/MasterChef.Mobile/MasterChef.Mobile/View/AtualizaRecipeView.xaml
+++ b/src/MasterChef.Mobile/MasterChef.Mobile/View/AtualizaRecipeView.xaml
@@ -31,7 +31,7 @@
                         <Label x:Name="lblId" Text ="{Binding Model.Id}" IsVisible="false"></Label>
 
                         <Button Text="UpLoad" Margin="10,10,10,10" BackgroundColor="Green" x:Name="btnUpLoad" Clicked="btnUpLoad_Clicked"/>
-                        <Button Text="Salvar" Margin="10,10,10,10"  x:Name="btnSalvar" Clicked="btnSalvar_Clicked"/>
+                        <Button Text="Save" Margin="10,10,10,10"  x:Name="btnSalvar" Clicked="btnSalvar_Clicked"/>
                         <Button Text="Excluir" Margin="10,10,10,10" BackgroundColor="Red" x:Name="btnExcluir" Clicked="btnExcluir_Clicked"/>
                         <Button Text="Ingredientes" Margin="10,10,10,10" BackgroundColor="Gray" x:Name="btnIngredientes" Clicked="btnIngredientes_Clicked"/>
                     </StackLayout>
